--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="flex-container">
 
-<div class="flex-child"> <p>After seeing how hard our community has worked the past few months, we've decided to adjust the parameters of our pConcave token launch. All whitelist roles will still be honored, but we’re opening up a PConcave presale for a smaller part of the community first. We’re doing this both to reward your time in the Cave, and as a test run for our Engineering team to make sure we can launch flawlessly. 
+<div class="flex-child"> <p>After seeing how hard our community has worked the past few months, we're excited to finally offer our initial token sale! 
 </p> <p>
  In this pre-launch round, pConcave can be purchased for .1E per 1000, with a maximum transaction limit of 1E. Remember:  pConcave is a precursor derivative of the Concave Native Token; it gives the holder the option to mint Concave Native Tokens by burning pConcave and providing the intrinsic value of Concave native token. Once the public sale has launched, you’ll be able to mint your Concave tokens.</p></div>
 <div class="flex-child"> 
